Fixed z-index of navbar
-Adjusted z index so nav bar appears over text

--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ h6 {
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
+  z-index: 1000;
 }
 
 /* Style rule set for individual li */
